--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -20,11 +20,13 @@
 
 
 
+
 <nav id="Navigation">
   <div class="ezdan-navigation-wrapper">
     <div class="container">
       <div
-        class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center">
+        class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
+      >
         <div class="ezdan-main-menu">
           <ul class="d-flex d-xl-none align-items-center">
             <li id="bar">
@@ -38,14 +40,12 @@
             <li class="d-xl-none" id="cross">
               <i class="fa-solid fa-xmark"></i>
             </li>
+            
+            <li><a href="#">{% component 'header.menu' %} </a></li>
            
-        <li>   <a>{% component 'header.menu' %}</a></li> 
-
-
           </ul>
         </div>
         <div class="ezdan-logo">
-         
           <a class="" href="{{ store.url }}">
             <img fetchpriority="high" width="100%" height="100%" loading="eager" src="{{ store.logo }}" alt="{{ store.name }} logo">
             {% if is_page('index') %}
@@ -54,9 +54,6 @@
               <h2 class="sr-only">{{ store.name }}</h2>
             {% endif %}
         </a>
-       
-
-
         </div>
         <div class="ezdan-left-menu">
           <ul class="d-flex align-items-center">
@@ -64,13 +61,13 @@
               <a href="#">الدورات التدريبية</a>
             </li>
             <li class="d-none d-xl-block">
-              <a href="#"><i class="fa-solid fa-magnifying-glass">بحث</i></a>
+              <a href="#"><i class="sicon-search"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-solid fa-cart-shopping">سلة</i></a>
+              <a href="#"><i class="sicon-cart2"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-regular fa-user"></i>مستخدم</a>
+              <a href="#"><i class="sicon-user"></i></a>
             </li>
           </ul>
         </div>
