--- a/src/views/components/header/menu.twig
+++ b/src/views/components/header/menu.twig
@@ -11,11 +11,12 @@
 | menus[].products     | ?Product[] *Collection | List of selected products or null                  |
 #}
 
-<nav id="mobile-menu" class="mobile-menu">
-    <ul class="main-menu">
+<nav id="mobile-menu" class="ezdan-main-nav d-xl-flex align-items-xl-center">
+    <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
+        <li class="d-xl-none">
         {% for menu_id, menu in menus %}
             {% include 'components.header._menu-item' with {is_root_menu:true} %}
-        {% endfor %}
+        {% endfor %}</li>
     </ul>
     <button class="btn--close close-mobile-menu sicon-cancel lg:hidden"></button>
 </nav>
