--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -47,7 +47,7 @@
         </div>
         <div class="ezdan-logo">
           <a class="" href="{{ store.url }}">
-            <img fetchpriority="high" width="100%" height="100%" loading="eager" src="{{ store.logo }}" alt="{{ store.name }} logo">
+            <img  loading="eager" src="{{ store.logo }}" alt="{{ store.name }} logo">
             {% if is_page('index') %}
               <h1 class="sr-only">{{ store.name }}</h1>
             {% else %}
