--- a/src/views/components/ezdan-MainSLiderhero.twig
+++ b/src/views/components/ezdan-MainSLiderhero.twig
@@ -16,13 +16,14 @@
       loop
       type="fullwidth">
         <div slot="items">
-            {% for slide in component.slides %}
+            {% for slide in component.SliderHero %}
                 <div class="swiper-lazy-wrap w-full min-h-[300px] lg:min-h-[528px] bg-dark">
                     <div data-background="{{ slide.image }}" class="swiper-lazy"></div>
                     <div class="flex-center container pb-16 sm:pb-0 home-slider__content relative h-full">
                         <div class=" w-4/6 text-center md:w-7/12 lg:w-5/12 text-white">
-                            <h2 data-swiper-parallax="-500" class="lg:text-title-size font-bold leading-tight mb-4">{{ slide.title }}</h2>
-                            <p data-swiper-parallax="-300" class="line-clamp-2 description">{{ slide.description }}</p>
+                            <h2 data-swiper-parallax="-500" class="lg:text-title-size font-bold leading-tight mb-4">{{ slide.string }}</h2>
+                            <p data-swiper-parallax="-300" class="line-clamp-2 description">{{ slide.text_area }}</p>
+                            <p>{{ slide.url}}</p>
                         </div>
                     </div>
                 </div>
