--- a/public/app.css
+++ b/public/app.css
@@ -18463,12 +18463,7 @@ fieldset:disabled .s-block--slider-with-bg .s-slider-block__display-all {
 .s-block--tabs-produtcs + .s-block--tabs-produtcs {
   padding-top: 2em;
 }
-salla-slider {
-  margin-top: -185px !important;
-}
-salla-slider {
-  display:block;
-}
+salla-slider{display:block}
 salla-slider.details-slider .s-slider-container{border-radius:0.375rem;border-width:1px;--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity));
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-white-rgb), 1);
@@ -18760,6 +18755,76 @@ model-viewer[style*=width]:before{display:none}
 .blog-slider .swiper-slide img{max-height:480px;min-height:380px}
 @media (min-width: 768px){
 .blog-slider .swiper-slide img{max-height:680px}}
+.ezdan-hero-wrapper {
+  position: relative;
+  margin-top: -185px;
+}
+.slide-1,
+.slide-2,
+.slide-3 {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 1050px;
+}
+.ezdan-slider-conent {
+  padding-top: 300px;
+}
+.ezdan-slider-conent h2 {
+  font-size: 72px;
+  font-weight: 600;
+  color: #fff;
+}
+.ezdan-slider-conent p {
+  font-size: 30px;
+  font-weight: 400;
+  color: #fff;
+}
+.ezdan-hero-btn {
+  padding-top: 40px;
+}
+.ezdan-hero-btn a {
+  font-size: 30px;
+  font-weight: 500;
+  color: #fff;
+  background: #d7421d;
+  padding: 0 35px 20px;
+}
+.owl-dots.disabled,
+.owl-nav.disabled {
+  display: block !important;
+}
+.owl-prev {
+  position: absolute;
+  top: 40%;
+  right: 50px;
+}
+.owl-next {
+  position: absolute;
+  top: 40%;
+  left: 50px;
+}
+.owl-prev i,
+.owl-next i {
+  font-size: 20px;
+  color: #fff;
+}
+.owl-prev:hover,
+.owl-next:hover {
+  background: none !important;
+}
+.owl-dots {
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  transform: translate(-50%);
+}
+.owl-dot span {
+  background: rgba(255, 255, 255, 0.6156862745) !important;
+}
+.owl-dot.active span {
+  background: #fff !important;
+}
 .product-entry{position:relative;display:flex;height:100%;justify-content:space-between;border-radius:0.5rem;--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity));transition-property:box-shadow;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:300ms;
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-white-rgb), 1);
