--- a/public/app.css
+++ b/public/app.css
@@ -20408,6 +20408,96 @@ button.swiper-pagination-bullet {
   backface-visibility: hidden;
   overflow: hidden;
 }
+/* Coffee Section CSS End */
+.ezdan-coffee-wrapper {
+  padding-top: 150px;
+}
+.ezdan-coffee-top {
+  max-width: 1080px;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
+.ezdan-coffee-top h3 {
+  font-size: 35px;
+  font-weight: 400;
+  color: #371a08;
+}
+.ezdan-coffee-slider {
+  padding-top: 100px;
+}
+.ezdan-coffee-slider .owl-nav {
+  display: none !important;
+}
+.ezdan-coffee-slider .owl-dots {
+  display: none !important;
+}
+.ezdan-coffee-slide::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 70%;
+  height: 30px;
+  z-index: 1;
+}
+.ezdan-coffee-slide.blue::before {
+  background: #37409d;
+}
+.ezdan-coffee-slide.sky-blue::before {
+  background: #6aa7d5;
+}
+.ezdan-coffee-slide.green::before {
+  background: #00a56e;
+}
+.ezdan-coffee-slide.orange::before {
+  background: #f78a08;
+}
+.ezdan-coffee-slide.red::before {
+  background: #d7421d;
+}
+.ezdan-coffee-slide-img {
+  height: 100%;
+  border-radius: 20px;
+}
+.ezdan-coffee-slide-img img {
+  height: 100%;
+  border-radius: 20px;
+}
+.ezdan-coffee-slide-content {
+  position: absolute;
+  right: 50px;
+  bottom: 130px;
+}
+.ezdan-coffee-slide-content::before {
+  position: absolute;
+  content: "";
+  top: -50px;
+  right: 0;
+  width: 30px;
+  height: 30px;
+}
+.ezdan-coffee-slide-content h2 {
+  font-size: 40px;
+  font-weight: 500;
+  color: #ffffff;
+}
+.ezdan-coffee-slide-content.blue::before {
+  background: #37409d;
+}
+.ezdan-coffee-slide-content.sky-blue::before {
+  background: #6aa7d5;
+}
+.ezdan-coffee-slide-content.green::before {
+  background: #00a56e;
+}
+.ezdan-coffee-slide-content.orange::before {
+  background: #f78a08;
+}
+.ezdan-coffee-slide-content.red::before {
+  background: #d7421d;
+}
 .first\:rounded-t-md:first-child{border-top-left-radius:0.375rem;border-top-right-radius:0.375rem}
 .first\:pt-16:first-child{padding-top:4rem}
 .last\:mb-0:last-child{margin-bottom:0px}
