--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -93,3 +93,4 @@
 @import 'lite-youtube-embed';
 @import 'swiper/css/bundle';
 @import 'mmenu-light/dist/mmenu-light.css';
+@import './05-utilities/ezdanstyle';
