--- a/src/views/components/Ezdan-Coffee-Section-Home.twig
+++ b/src/views/components/Ezdan-Coffee-Section-Home.twig
@@ -3,10 +3,14 @@
  <section id="Coffee">
     <div class="ezdan-coffee-wrapper">
       <div class="container">
+
+         {% for category in component.ezdan-coffee-section-home %}
+
+         {% endfor %}
+
         <div class="ezdan-coffee-top">
           <h3>
-            من معالم العاصمة الخالدة في الذاكرة و من حارات الرياض العتيقة
-            التي تشرق شمسها كل يوم على رائحة البن و القهوة
+            {{component.ezdan-Coffee-Section-HomeTitle}}
           </h3>
           <div class="ezdan-arrow-down-icon pt-md-5 mt-4">
             <img
@@ -16,6 +20,7 @@
             />
           </div>
         </div>
+        {% endfor %}
       </div>
       <div class="ezdan-coffee-slider owl-carousel owl-theme">
         <div class="ezdan-coffee-slide blue item position-relative">
@@ -78,3 +83,4 @@
   </section>
 
   <!-- Coffee Section HTML End -->
+ 
