--- a/src/views/components/CoffeSlider.twig
+++ b/src/views/components/CoffeSlider.twig
@@ -1,1 +1,79 @@
 <h1>test</h1>
+
+
+<section id="Coffee">
+    <div class="ezdan-coffee-wrapper">
+      <div class="container">
+        <div class="ezdan-coffee-top">
+          <h3>
+            من معالم العاصمة الخالدة في الذاكرة و من حارات الرياض العتيقة
+            التي تشرق شمسها كل يوم على رائحة البن و القهوة
+          </h3>
+          <div class="ezdan-arrow-down-icon pt-md-5 mt-4">
+            <img
+              draggable="false"
+              src="assets/images/arrow-down-icon.svg"
+              alt="arrow-down-icon"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="ezdan-coffee-slider owl-carousel owl-theme">
+        <div class="ezdan-coffee-slide blue item position-relative">
+          <div class="ezdan-coffee-slide-img">
+            <img
+              src="assets/images/coffee-slide-img1.png"
+              alt="coffee-slide-img1"
+            />
+            <div class="ezdan-coffee-slide-content blue">
+              <h2>الدورات التدريبية</h2>
+            </div>
+          </div>
+        </div>
+        <div class="ezdan-coffee-slide sky-blue item position-relative">
+          <div class="ezdan-coffee-slide-img">
+            <img
+              src="assets/images/coffee-slide-img2.png"
+              alt="coffee-slide-img2"
+            />
+            <div class="ezdan-coffee-slide-content sky-blue">
+              <h2>القهوة السعودية</h2>
+            </div>
+          </div>
+        </div>
+        <div class="ezdan-coffee-slide green item position-relative">
+          <div class="ezdan-coffee-slide-img">
+            <img
+              src="assets/images/coffee-slide-img3.png"
+              alt="coffee-slide-img3"
+            />
+            <div class="ezdan-coffee-slide-content green">
+              <h2>الماتشا</h2>
+            </div>
+          </div>
+        </div>
+        <div class="ezdan-coffee-slide orange item position-relative">
+          <div class="ezdan-coffee-slide-img">
+            <img
+              src="assets/images/coffee-slide-img4.png"
+              alt="coffee-slide-img4"
+            />
+            <div class="ezdan-coffee-slide-content orange">
+              <h2>القهوة</h2>
+            </div>
+          </div>
+        </div>
+        <div class="ezdan-coffee-slide red item position-relative">
+          <div class="ezdan-coffee-slide-img">
+            <img
+              src="assets/images/coffee-slide-img5.png"
+              alt="coffee-slide-img5"
+            />
+            <div class="ezdan-coffee-slide-content red">
+              <h2>مجموعات التوفير</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
