--- a/src/views/components/Coffee-Section.twig
+++ b/src/views/components/Coffee-Section.twig
@@ -1,11 +1,12 @@
 
-<div slot="items">
 
 
-    {% for category in component.Coffee-Section %}
 
-<h1>test</h1>
 
+
+
+{% for slide in component.CoffeeSection %}
+
+{{CoffeeSection.CoffeeSectiontitle}}
 
 {% endfor %}
-</div>
