--- a/src/views/components/Coffee-Section.twig
+++ b/src/views/components/Coffee-Section.twig
@@ -7,6 +7,6 @@
 
 {% for slide in component.CoffeeSection %}
 
-{{CoffeeSection.CoffeeSectiontitle}}
+{{CoffeeSection.CoffeeSectionstring}}
 
 {% endfor %}
