--- a/src/views/components/Coffee-Section.twig
+++ b/src/views/components/Coffee-Section.twig
@@ -4,9 +4,9 @@
 
 
 
-
-{% for slide in component.CoffeeSection %}
-
-{{CoffeeSection.CoffeeSectionstring}}
+{% for catagors in component.CoffeeSection %}
+<p>
+{{catagors.CoffeeSectionstring}}
+</p>
 
 {% endfor %}
