--- a/src/views/components/Coffee-Section.twig
+++ b/src/views/components/Coffee-Section.twig
@@ -2,13 +2,22 @@
 
 
 
+
+
+
 <h1>test</h1>
 
 
 {% for catagors in component.CoffeeSectioncollection %}
 <p>
-{{catagors.CoffeeSectioncollection}}
+            {{CoffeeSectioncollection.CoffeeSectionTilitel}}
 </p>
+
+<p>
+    {{CoffeeSectioncollection.CoffeeSectionstringimage_1}}
+</p>
+
+
 
 {% endfor %}
 
@@ -22,87 +31,3 @@
 {% endfor %}
 
 
-
-<section id="Coffee">
-    <div class="ezdan-coffee-wrapper">
-      <div class="container">
-        <div class="ezdan-coffee-top">
-            {% for catagors in component.CoffeeSectioncollection %}
-            <h3>
-                {{catagors.CoffeeSectioncollection}}
-            </h3>
-            
-            {% endfor %}
-          
-                      
-          <div class="ezdan-arrow-down-icon pt-md-5 mt-4">
-            <img
-              draggable="false"
-              src="{{catagors.image_1}}"
-              alt="arrow-down-icon"
-            />
-          </div>
-        </div>
-
-
-
-      </div>
-      <div class="ezdan-coffee-slider owl-carousel owl-theme">
-        <div class="ezdan-coffee-slide blue item position-relative">
-          <div class="ezdan-coffee-slide-img">
-            <img
-              src="assets/images/coffee-slide-img1.png"
-              alt="coffee-slide-img1"
-            />
-            <div class="ezdan-coffee-slide-content blue">
-              <h2>الدورات التدريبية</h2>
-            </div>
-          </div>
-        </div>
-        <div class="ezdan-coffee-slide sky-blue item position-relative">
-          <div class="ezdan-coffee-slide-img">
-            <img
-              src="assets/images/coffee-slide-img2.png"
-              alt="coffee-slide-img2"
-            />
-            <div class="ezdan-coffee-slide-content sky-blue">
-              <h2>القهوة السعودية</h2>
-            </div>
-          </div>
-        </div>
-        <div class="ezdan-coffee-slide green item position-relative">
-          <div class="ezdan-coffee-slide-img">
-            <img
-              src="assets/images/coffee-slide-img3.png"
-              alt="coffee-slide-img3"
-            />
-            <div class="ezdan-coffee-slide-content green">
-              <h2>الماتشا</h2>
-            </div>
-          </div>
-        </div>
-        <div class="ezdan-coffee-slide orange item position-relative">
-          <div class="ezdan-coffee-slide-img">
-            <img
-              src="assets/images/coffee-slide-img4.png"
-              alt="coffee-slide-img4"
-            />
-            <div class="ezdan-coffee-slide-content orange">
-              <h2>القهوة</h2>
-            </div>
-          </div>
-        </div>
-        <div class="ezdan-coffee-slide red item position-relative">
-          <div class="ezdan-coffee-slide-img">
-            <img
-              src="assets/images/coffee-slide-img5.png"
-              alt="coffee-slide-img5"
-            />
-            <div class="ezdan-coffee-slide-content red">
-              <h2>مجموعات التوفير</h2>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
