--- a/public/app.css
+++ b/public/app.css
@@ -1224,8 +1224,8 @@ textarea.s-form-control.is-invalid {
   padding-right: 1.5rem;
   padding-left: 1.5rem}
 .s-bottom-alert-modal-content-title{font-size:1.125rem;line-height:1.75rem;font-weight:500;
-  margin-top: 1.5rem;
-  margin-bottom: 0.5rem}
+  margin-bottom: 0.5rem;
+  margin-top: 1.5rem}
 .s-bottom-alert-modal-content hr{
   margin-top: 1.5rem}
 .s-bottom-alert-modal-content-screenshots{
@@ -1440,8 +1440,8 @@ input[type=radio].sr-only:checked ~ div.s-cart-summary-count {
 .s-comment-form-input:focus{border-color:#414042;border-color:var(--color-primary);--tw-ring-offset-width:0px}
 .dark .s-comment-form-input{--tw-border-opacity:1;border-color:rgba(75, 85, 99, 1);border-color:rgba(75, 85, 99, var(--tw-border-opacity));--tw-bg-opacity:1;background-color:rgba(75, 85, 99, 1);background-color:rgba(75, 85, 99, var(--tw-bg-opacity))}
 .s-comment-form-action{display:flex;align-items:center;justify-content:flex-end;
-  margin-top: 0.5rem;
-  margin-bottom: 1.5rem}
+  margin-bottom: 1.5rem;
+  margin-top: 0.5rem}
 .s-comment-form-avatar{margin-right:1.25rem;height:4rem;width:4rem;flex-shrink:0;border-radius:9999px;-o-object-fit:cover;object-fit:cover}
 [dir="rtl"] .s-comment-form-avatar{margin-right:0px;margin-left:1.25rem}
 .s-comment-form-content{width:100%}
@@ -1959,10 +1959,10 @@ input[type=radio].sr-only:checked ~ div.s-file-upload-profile-image .s-file-uplo
   pointer-events: none;
 }
 .s-filters-widget-more {
-  margin-top: 0.5rem;
   --bs-text-opacity: 1;
   color: rgba(var(--bs-primary-rgb), 1);
   color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity));
+  margin-top: 0.5rem;
 }
 .s-filters-widget-plusminus{position:relative;height:0.75rem;width:0.75rem;--tw-rotate:90deg;transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(90deg) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))}
 .s-filters-widget-plusminus::before{position:absolute;left:0px;top:50%;display:block;height:0.125rem;width:100%;--tw-bg-opacity:1;background-color:rgba(153, 153, 153, 1);background-color:rgba(153, 153, 153, var(--tw-bg-opacity));transition-property:0.35s;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:150ms;--tw-content:'';content:'';content:var(--tw-content)}
@@ -1981,10 +1981,10 @@ input[type=radio].sr-only:checked ~ div.s-file-upload-profile-image .s-file-uplo
 .s-gifting-widget .s-list-tile-item{flex-direction:row;text-align:left}
 [dir="rtl"] .s-gifting-widget .s-list-tile-item{text-align:right}}
 .s-gifting-widget-action button{border-radius:9999px;--tw-border-opacity:1;border-color:rgba(232, 232, 232, 1);border-color:rgba(232, 232, 232, var(--tw-border-opacity));--tw-bg-opacity:1;background-color:rgba(232, 232, 232, 1);background-color:rgba(232, 232, 232, var(--tw-bg-opacity));padding-left:2rem;padding-right:2rem;font-weight:400;--tw-text-opacity:1;color:rgba(0, 0, 0, 1);color:rgba(0, 0, 0, var(--tw-text-opacity));
-  margin-top: 1.5rem;
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), 1);
-  color: rgba(var(--bs-black-rgb), var(--bs-text-opacity))}
+  color: rgba(var(--bs-black-rgb), var(--bs-text-opacity));
+  margin-top: 1.5rem}
 @media (min-width: 768px){
 .s-gifting-widget-action button{margin-top:0px}}
 .s-gifting-widget-action-content{display:flex;align-items:center}
@@ -2143,8 +2143,8 @@ input[type=radio].sr-only:checked ~ div.s-gifting-remove-preview {
   margin-bottom: 3rem}
 .s-gifting-image{margin-left:5px;margin-right:5px}
 .s-infinite-scroll-wrapper{
-  margin-top: 1.5rem;
-  text-align: center}
+  text-align: center;
+  margin-top: 1.5rem}
 .s-infinite-scroll-last{margin:0px;
   margin: 0;
   text-align: center}
@@ -2264,11 +2264,11 @@ input[type=radio].sr-only:checked ~ div.s-gifting-remove-preview {
   opacity: 0}
 [dir='rtl'] .s-login-modal-main-btn-arrow{transform:scale(-1)}
 .s-login-modal-currentPhone{margin-bottom:1.75rem;font-size:14px;font-weight:500;
-  margin-top: 0.5rem;
-  text-align: center}
+  text-align: center;
+  margin-top: 0.5rem}
 .s-login-modal-currentEmail{margin-bottom:1.75rem;font-size:14px;font-weight:500;
-  margin-top: 0.5rem;
-  text-align: center}
+  text-align: center;
+  margin-top: 0.5rem}
 .s-login-modal-enter-button{display:flex;
   margin-top: 0.5rem}
 .s-login-modal-custom-fields .s-file-upload-wrapper{min-height:120px}
@@ -2368,9 +2368,9 @@ input[type=radio].sr-only:checked ~ div.s-loyalty-prize-item-check {
 .s-loyalty-confirmation-actions{margin-top:1.25rem;display:flex;align-items:center;justify-content:space-between}
 .s-loyalty-confirmation-actions > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:0;margin-right:calc(1.25rem * 0);margin-right:calc(1.25rem * var(--tw-space-x-reverse));margin-left:calc(1.25rem * (1 - 0));margin-left:calc(1.25rem * (1 - var(--tw-space-x-reverse)));margin-left:calc(1.25rem * calc(1 - 0));margin-left:calc(1.25rem * calc(1 - var(--tw-space-x-reverse)))}
 .s-loyalty-confirmation-actions{
-  margin-top: 3rem;
   padding: 3rem;
-  padding-top: 0.5rem}
+  padding-top: 0.5rem;
+  margin-top: 3rem}
 [dir="rtl"] .s-loyalty-confirmation-actions > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:1}
 .s-loyalty-widget .s-list-tile-item{padding:0px !important}
 .s-loyalty-widget-icon{display:flex;height:4rem;width:4rem;align-items:center;justify-content:center;border-radius:9999px;background-color:#414042;background-color:var(--color-primary);
@@ -2439,8 +2439,8 @@ input[type=radio].sr-only:checked ~ div.s-maintenance-alert-close {
 @media (min-width: 768px){
 .s-maintenance-alert-close svg{height:1.25rem;width:1.25rem}}
 .s-maintenance-alert-content{display:flex;width:100%;align-items:center;justify-content:space-between;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem}
+  margin-bottom: 1.5rem;
+  margin-top: 1.5rem}
 @media (min-width: 640px){
 .s-maintenance-alert-content{padding-left:2rem;padding-right:2rem}}
 .s-maintenance-alert-container{display:flex;align-items:center}
@@ -2496,8 +2496,8 @@ input[type=radio].sr-only:checked ~ div.s-map-search-wrapper {
   padding: 0.5rem}
 [dir="rtl"] .s-map-search-wrapper input{text-align:right}
 .s-map-search-results{margin-top:0px;display:flex;height:6rem;flex-direction:column;
-  margin-top: 0;
-  padding: 0.5rem}
+  padding: 0.5rem;
+  margin-top: 0}
 .s-map-modal-body .s-loading-container{position:absolute;margin:0px;padding:5rem}
 input[type=radio].sr-only div.s-map-modal-body .s-loading-container {
   transition: all 0.3s;
@@ -3254,14 +3254,14 @@ input[type=radio].sr-only:checked ~ div.s-product-card-full-image .s-product-car
 .s-product-options-donation-progress-target-data{margin-top:0.625rem;margin-bottom:0.625rem;display:block;font-size:0.75rem;line-height:1rem;--tw-text-opacity:1;color:rgba(156, 163, 175, 1);color:rgba(156, 163, 175, var(--tw-text-opacity))}
 .s-product-options-donation-progress-target-message{font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(248, 113, 113, 1);color:rgba(248, 113, 113, var(--tw-text-opacity))}
 .s-product-options-donation-wrapper{position:relative;margin-bottom:0.625rem;align-items:center;justify-content:space-between;border-top-width:1px;--tw-border-opacity:1;border-color:rgba(243, 244, 246, 1);border-color:rgba(243, 244, 246, var(--tw-border-opacity));
-  margin-top: 3rem;
-  padding-top: 3rem}
+  padding-top: 3rem;
+  margin-top: 3rem}
 .s-product-options-donation-wrapper:only-child{margin-top:0px;border-style:none;padding-top:0px}
 @media (min-width: 640px){
 .s-product-options-donation-wrapper{margin-bottom:0px}}
 .s-product-options-donation-wrapper h4{font-weight:700;
-  margin-top: 3rem;
-  margin-bottom: 1rem}
+  margin-bottom: 1rem;
+  margin-top: 3rem}
 .s-product-options-donation-amount-label{margin-bottom:0.625rem;display:block;flex:1 1 0%;font-size:0.875rem;line-height:1.25rem}
 .s-product-options-donation-amount-input-container{position:relative;flex:1 1 0%}
 .s-product-options-donation-amount-input{margin-bottom:0.625rem;display:block;height:3rem;width:100%;border-radius:0.375rem;--tw-border-opacity:1;border-color:rgba(209, 213, 219, 1);border-color:rgba(209, 213, 219, var(--tw-border-opacity));padding-left:0.625rem;padding-right:0.625rem;--tw-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);--tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);box-shadow:0 0 rgba(0,0,0,0), 0 0 rgba(0,0,0,0), 0 1px 2px 0 rgba(0, 0, 0, 0.05);box-shadow:var(--tw-ring-offset-shadow, 0 0 rgba(0,0,0,0)), var(--tw-ring-shadow, 0 0 rgba(0,0,0,0)), var(--tw-shadow);
@@ -17396,8 +17396,8 @@ fieldset:disabled .btn {
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color)}
 .store-footer .social-link:hover{opacity:0.75}
 .store-footer .contact-social{border-top-width:1px;border-color:rgba(255, 255, 255, 0.1);
-  margin-top: 3rem;
-  padding-top: 3rem}
+  padding-top: 3rem;
+  margin-top: 3rem}
 .store-footer .contact-social ul{margin-bottom:0px;
   margin-bottom: 0}
 .footer-is-light .store-footer{--tw-bg-opacity:1;background-color:rgba(249, 250, 251, 1);background-color:rgba(249, 250, 251, var(--tw-bg-opacity));--tw-text-opacity:1;color:rgba(55, 65, 81, 1);color:rgba(55, 65, 81, var(--tw-text-opacity))}
@@ -19405,8 +19405,8 @@ input[type=radio].sr-only:checked ~ div.points-ways__list .way-item__icon span {
 .points-ways__list .way-item__content h4{word-break:break-all;font-size:1.25rem;line-height:1.75rem;font-weight:700}
 .points-ways__list .way-item__content p{font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(156, 163, 175, 1);color:rgba(156, 163, 175, var(--tw-text-opacity))}
 .points-ways__list .way-item__action{
-  margin-top: auto;
-  padding-top: 1.5rem}
+  padding-top: 1.5rem;
+  margin-top: auto}
 .virtooal {
   margin: 15px 0;
   border-radius: 10px;
@@ -20497,6 +20497,45 @@ button.swiper-pagination-bullet {
 }
 .ezdan-coffee-slide-content.red::before {
   background: #d7421d;
+}
+.pt-md-0 {
+  padding-top: 0 !important;
+}
+.pt-md-1 {
+  padding-top: 0.25rem !important;
+}
+.pt-md-2 {
+  padding-top: 0.5rem !important;
+}
+.pt-md-3 {
+  padding-top: 1rem !important;
+}
+.pt-md-4 {
+  padding-top: 1.5rem !important;
+}
+.pt-md-5 {
+  padding-top: 3rem !important;
+}
+.mt-0 {
+  margin-top: 0 !important;
+}
+.mt-1 {
+  margin-top: 0.25rem !important;
+}
+.mt-2 {
+  margin-top: 0.5rem !important;
+}
+.mt-3 {
+  margin-top: 1rem !important;
+}
+.mt-4 {
+  margin-top: 1.5rem !important;
+}
+.mt-5 {
+  margin-top: 3rem !important;
+}
+.mt-auto {
+  margin-top: auto !important;
 }
 .first\:rounded-t-md:first-child{border-top-left-radius:0.375rem;border-top-right-radius:0.375rem}
 .first\:pt-16:first-child{padding-top:4rem}
