--- a/src/assets/styles/05-utilities/ezdanstyle.scss
+++ b/src/assets/styles/05-utilities/ezdanstyle.scss
@@ -111,3 +111,46 @@
 	}
 }
 
+
+
+
+.pt-md-0 {
+	padding-top: 0 !important;
+}
+.pt-md-1 {
+	padding-top: .25rem !important;
+}
+.pt-md-2 {
+	padding-top: .5rem !important;
+}
+.pt-md-3 {
+	padding-top: 1rem !important;
+}
+.pt-md-4 {
+	padding-top: 1.5rem !important;
+}
+.pt-md-5 {
+	padding-top: 3rem !important;
+}
+
+.mt-0 {
+	margin-top: 0 !important;
+}
+.mt-1 {
+	margin-top: .25rem !important;
+}
+.mt-2 {
+	margin-top: .5rem !important;
+}
+.mt-3 {
+	margin-top: 1rem !important;
+}
+.mt-4 {
+	margin-top: 1.5rem !important;
+}
+.mt-5 {
+	margin-top: 3rem !important;
+}
+.mt-auto {
+	margin-top: auto !important;
+}
