--- a/public/app.css
+++ b/public/app.css
@@ -20516,6 +20516,9 @@ button.swiper-pagination-bullet {
 .pt-md-5 {
   padding-top: 3rem !important;
 }
+.pt-md-5 {
+  margin: inherit;
+}
 .mt-0 {
   margin-top: 0 !important;
 }
@@ -20536,6 +20539,15 @@ button.swiper-pagination-bullet {
 }
 .mt-auto {
   margin-top: auto !important;
+}
+img {
+  margin: inherit !important;
+}
+img {
+  vertical-align: middle;
+}
+svg {
+  vertical-align: middle;
 }
 .first\:rounded-t-md:first-child{border-top-left-radius:0.375rem;border-top-right-radius:0.375rem}
 .first\:pt-16:first-child{padding-top:4rem}
