--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -94,3 +94,4 @@
 @import 'swiper/css/bundle';
 @import 'mmenu-light/dist/mmenu-light.css';
 @import './05-utilities/ezdanstyle';
+@import './05-utilities/ezdan.css';
