--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -94,4 +94,8 @@
 @import 'swiper/css/bundle';
 @import 'mmenu-light/dist/mmenu-light.css';
 @import './05-utilities/ezdanstyle';
-@import './05-utilities/ezdan.css';
+@import './05-utilities/bootstrap.min.css';
+@import './05-utilities/owl.carousel.min.css';
+@import './05-utilities/owl.theme.default.min.css';
+@import './05-utilities/responsive.css';
+@import './05-utilities/style.css';
