--- a/src/views/components/CatSlider.twig
+++ b/src/views/components/CatSlider.twig
@@ -18,7 +18,7 @@
               alt="coffee-slide-img1"
             />
             <div class="ezdan-coffee-slide-content blue">
-              <h2>الدورات التدريبية</h2>
+              <h2>{{ catagory.CatSliderstring }}</h2>
             </div>
           </div>
           {% endfor %}
