--- a/public/app.css
+++ b/public/app.css
@@ -13242,7 +13242,7 @@ fieldset:disabled .btn {
      position: relative
  }
 .owl-carousel {
-     display: table-cell;
+     display: none;
      width: 100%;
      z-index: 1
  }
