--- a/public/app.css
+++ b/public/app.css
@@ -15649,6 +15649,8 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .btn:hover{opacity:0.8}
 .form-label{display:block;font-size:0.875rem;line-height:1.25rem;font-weight:500;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));
   margin-bottom: 0.25rem}
+.spinner-loader.reverse{border-right-color:#9f7171 !important}
+.spinner-loader.reverse{background-color:#f98181}
 .has-error .s-form-label{color:#ff443a}
 .has-error .s-form-control, .has-error .s-tel-input-control, .has-error .s-datetime-picker-input{border-color:#ff443a;color:#ff443a}
 .toggle-checkbox .s-toggle-switcher{display:inline-block;background:#ccc;border-radius:16px;width:40px;height:25px;position:relative;vertical-align:middle;transition:background 0.25s;}
