--- a/src/views/layouts/master.twig
+++ b/src/views/layouts/master.twig
@@ -149,7 +149,9 @@
   <script type="text/javascript" src="{{ asset('bootstrap.bundle.min.js') }}"></script>
   <script type="text/javascript" src="{{ asset('owl.carousel.min.js') }}"></script> 
   <script type="text/javascript" src="{{ asset('script.js') }}"></script> 
-  
+  <script type="text/javascript" src="{{ asset('jquery.min.js') }}"></script> 
+
+
     {% hook 'head:start' %}
     {% hook head %}
     {% block styles %}{% endblock %}
