--- a/public/app.css
+++ b/public/app.css
@@ -15347,6 +15347,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .table{display:table}
 .flow-root{display:flow-root}
 .grid{display:grid}
+.\!grid{display:grid !important}
 .contents{display:contents}
 .\!hidden{display:none !important}
 .hidden{display:none}
