--- a/src/views/components/CatSlider.twig
+++ b/src/views/components/CatSlider.twig
@@ -32,7 +32,7 @@
         alt="coffee-slide-img2"
       />
       <div class="ezdan-coffee-slide-content sky-blue">
-        {{catagory.CatSliderstring}}
+        <h2>{{catagory.CatSliderstring}}</h2>
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@
         alt="coffee-slide-img3"
       />
       <div class="ezdan-coffee-slide-content green">
-        {{catagory.CatSliderstring}}
+       <h2> {{catagory.CatSliderstring}}</h2>
       </div>
     </div>
   </div>
@@ -54,7 +54,7 @@
         alt="coffee-slide-img4"
       />
       <div class="ezdan-coffee-slide-content orange">
-        {{catagory.CatSliderstring}}
+     <h2>   {{catagory.CatSliderstring}}</h2>
       </div>
     </div>
   </div>
@@ -65,7 +65,7 @@
         alt="coffee-slide-img5"
       />
       <div class="ezdan-coffee-slide-content red">
-        {{catagory.CatSliderstring}}
+       <h2> {{catagory.CatSliderstring}}</h2>
       </div>
     </div>
   </div>
