--- a/src/views/components/CatSlider.twig
+++ b/src/views/components/CatSlider.twig
@@ -13,37 +13,77 @@
 
 <div class="ezdan-coffee-slider owl-carousel owl-theme">
   {% for index,catagory  in component.catslidercollection %}
-  <div class="catagory{{index}}">
-  <div class="ezdan-coffee-slide blue item position-relative">
-   
-    <div class="ezdan-coffee-slide-img">
-      <img
-        src="{{ catagory.CatSliderimage }}"
-        alt="coffee-slide-img1"
-      />
-      <div class="ezdan-coffee-slide-content blue">
-        <h2>{{catagory.CatSliderstring}}</h2>
-      </div>
-    </div>
-  </div>
-</div>
 
-{% if index = 2 %}
-<div class="ezdan-coffee-slide green item position-relative">
-   
-  <div class="ezdan-coffee-slide-img">
-    <img
-      src="{{ catagory.CatSliderimage }}"
-      alt="coffee-slide-img1"
-    />
-    <div class="ezdan-coffee-slide-content green">
-      <h2>{{catagory.CatSliderstring}}</h2>
-    </div>
+{% if index == 1  %}
+<div class="ezdan-coffee-slide blue item position-relative">
+<div class="ezdan-coffee-slide-img">
+  <img
+    src="{{ catagory.CatSliderimage }}"
+    alt="coffee-slide-img1"
+  />
+  <div class="ezdan-coffee-slide-content blue">
+    <h2>{{catagory.CatSliderstring}}</h2>
   </div>
-</div>
-</div>
+</div></div>
 
 {% endif %}
+
+{% if index == 2  %}
+<div class="ezdan-coffee-slide sky-blue item position-relative">
+<div class="ezdan-coffee-slide-img">
+  <img
+    src="{{ catagory.CatSliderimage }}"
+    alt="coffee-slide-img1"
+  />
+  <div class="ezdan-coffee-slide-content sky-blue">
+    <h2>{{catagory.CatSliderstring}}</h2>
+  </div>
+</div></div>
+
+{% endif %}
+
+{% if index == 3  %}
+<div class="ezdan-coffee-slide green item position-relative">
+<div class="ezdan-coffee-slide-img">
+  <img
+    src="{{ catagory.CatSliderimage }}"
+    alt="coffee-slide-img1"
+  />
+  <div class="ezdan-coffee-slide-content green">
+    <h2>{{catagory.CatSliderstring}}</h2>
+  </div>
+</div></div>
+
+{% endif %}
+
+{% if index == 4  %}
+<div class="ezdan-coffee-slide orange item position-relative">
+<div class="ezdan-coffee-slide-img">
+  <img
+    src="{{ catagory.CatSliderimage }}"
+    alt="coffee-slide-img1"
+  />
+  <div class="ezdan-coffee-slide-content orange">
+    <h2>{{catagory.CatSliderstring}}</h2>
+  </div>
+</div></div>
+
+{% endif %}
+
+{% if index == 5  %}
+<div class="ezdan-coffee-slide red item position-relative">
+<div class="ezdan-coffee-slide-img">
+  <img
+    src="{{ catagory.CatSliderimage }}"
+    alt="coffee-slide-img1"
+  />
+  <div class="ezdan-coffee-slide-content red">
+    <h2>{{catagory.CatSliderstring}}</h2>
+  </div>
+</div></div>
+
+{% endif %}
+
 
 
   {% endfor %}
